[tool.poetry]
name = "googlesearch-python"
version = "1.2.0"
description = "A Python library for scraping the Google search engine."
authors = ["Nishant Vikramaditya <junk4Nv7@gmail.com>"]
license = "MIT"
packages = [{ include = "googlesearch" }]
readme = "README.md"
keywords = ["google", "search", "scraping"]

[tool.poetry.dependencies]
python = ">=3.6.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
